koha-tmpl/intranet-tmpl/prog/en/css/addbiblio.css
#addbibliotabs {
	margin-top : 1em;
}

#addbibliotabs .ui-tabs-panel {
	float : left;
}

.buttonPlus {
	font-weight : bold;
	text-decoration : none;
}

.buttonMinus {
	font-weight : bold;
	text-decoration : none;
}

a.expandfield {
	text-decoration : none;
}

#yui-cms-loading {
	background : #FFFFFF;
	color : #333333;
	display : none;
}

#yui-cms-loading #yui-cms-float {
	text-align : center;
	font-size : 175%;
	background-image : url(../../img/loading.gif);
	background-repeat : no-repeat;
	background-position : top;
	padding-top : 50px;
}

	 
#authoritytabs {
	margin-top : 1em;
	margin-bottom : 1em;
}

.toptabs .ui-tabs-nav li a {
	padding : .2em 1.2em;
}

div.tag {
    clear: both;
}

div.subfield_line {
	padding-bottom : .3em;
    clear: both;
}

div.subfield_line label {
    font-size:89%;
    float: left;
	 padding-right : .4em;
    width: 16em;
    text-align: left;
    clear:left;
}

.tag_title {
	font-size : 90%;
	padding : .2em 0;
}

.tagnum {
	font-size : 110%;
	font-weight : bold;
	color : #000;
	padding : .1em .3em .1em 0;
}

a.tagnum {
	font-size : 110%;
	font-weight : bold;
	color : #000;
	padding : .1em .3em .1em 0;
	text-decoration : none;
}

.subfield {
	color : #00698a;
	float: left;
	width: 10em;
	text-align:right;
}

.subfieldcode {
	display: block;
	float: left;
}

.labelsubfield {
	float:left;
}

.input_marceditor {
	float:left;
	width:30em;
}

.indicator {
    width: 1em;
}

*html .input_marceditor {
	width : 15em;
}

#cataloguing_additem_newitem fieldset.rows label, #cataloguing_additem_newitem fieldset.rows span.label {
	font-size : 100%;
	width : 25%;
}

#cataloguing_additem_newitem fieldset.rows li {
	padding-bottom : 3px;
}
#cataloguing_additem_newitem .input_marceditor {
	width : auto;
}

.mandatory_marker {
	color: red;
}
.linktools { display: block; white-space: nowrap; }
.linktools a { font-size : 75%; display:block;text-decoration:none;}
.linktools a {margin:0 2px;padding:2px;background-color:#FFF;text-align:center; }
.linktools a:first-child { border-bottom: 1px solid #DDD; }
.linktools a:hover { background-color: #FFC; }
.subfield_controls { margin : 0 .5em; }

