Fix for Bug 2122, Grayed out Fields not always visible
- Adding "readonly" class to readonly fields to guarantee
  that readonly state is indicated visually
- Adding "locked" icon to the background of readonly
  fields for additional visual feedback

(cherry picked from commit 240ce5a31c278e86af5f3d465bdd6c011c951068)

--- a/koha-tmpl/intranet-tmpl/prog/en/css/addbiblio.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/addbiblio.css
@@ -133,3 +133,4 @@ a.tagnum {
 .linktools a:first-child { border-bottom: 1px solid #DDD; }
 .linktools a:hover { background-color: #FFC; }
 .subfield_controls { margin : 0 .5em; }
+.readonly { border-width : 1px; border-style: inset; padding-left : 15px; background: #EEE url(../../img/locked.png) center left no-repeat; width:29em; }
